backend/frontend/src/css/main.less
@import "../../node_modules/bootstrap/less/bootstrap";
@import "../../node_modules/react-select/less/default";
@import (inline) "../../node_modules/react-bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css";
@import (inline) "../../node_modules/leaflet/dist/leaflet.css";

@import (inline) "../../node_modules/font-awesome/css/font-awesome.css";

// general
* {
    box-sizing: border-box;
}

html,
body {
    height: 100%;
    width: 100%;
}
h4 {
    padding-left: 10px;
    font-size: 16px;
}

input[type="number"],
select.units {
    &.form-control {
        display: inline-block;
        width: auto;
        margin-right: 10px;
    }
}

h3 {
    text-align: center;
}

label {
    margin-left: 10px;
    min-width: 100px;
}

.button-container {
    a {
        display: inline-block;
        margin: 0 5px;
    }
}
button.btn-add {
    margin: 0;
    padding: 0;
    height: 25px;
    width: 25px;
}
button.btn {
    margin-left: 5px;
    i.fa.fa-save {
        margin-right: 5px;
    }
}
button.big {
    @button-color: rgb(151, 234, 174);
    @button-indigo-color: rgb(111, 219, 244);
    @button-color-disable: #CDCDCD;

    .button-mixin(@color) {
        background-color: @color;
        &:hover {
            background-color: darken(@color, 10%);
        }
        &:active {
            background-color: darken(@color, 15%);
            outline: none;
        }
    }

    font-size: 14px;
    width: 100%;
    color: white;
    border: none;
    height: 100px;
    border-radius: 5px;
    margin-bottom: 30px;
    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
    transition: all .2s ease-in-out;
    .button-mixin(@button-color);
    &.indigo {
        .button-mixin(@button-indigo-color);
    }
    &.inactive {
        .button-mixin(@button-color-disable);
        pointer-events: none;
    }
    a {
        color: white;
    }
}
.form-group label {
    display: inline-block;
    margin-right: 5px;
}
.button.back {
    height: 50px;
    line-height: 50px;
}

// common
#main-wrapper {
    height: 100%;
    width: 100%;
    overflow: hidden;
    position: relative;
    #app-wrapper {
        height: 100%;
        overflow: auto;
    }
}
.navbar {
    margin: 0;
    border-radius: 0;
    border: 0;
    height: 40px;
    min-height: 40px;
    padding-left: 20px;
    ul {
        padding: 0;
        margin: 0;
        display: inline-block;
        li {
            display: inline-block;
        }
        li a {
            height: 40px;
            line-height: 40px;
            display: inline-block;
            color: white;
            padding: 0 20px;
            cursor: pointer;
            transition: all .2s ease-in-out;
            border-top-left-radius: 4px;
            border-top-right-radius: 4px;
            &:hover,
            &:focus {
                color: white;
                background-color: #337ab7;
                text-decoration: none;
            }
        }
        li.active a {
            background-color: white !important;
            color: black !important;
            cursor: default;
        }
    }
}

.user-block {
    display: inline-block;
    float: right;
    height: 40px;
    line-height: 40px;
    margin-right: 10px;
    > * {
        margin-left: 10px;
    }
    a,
    span {
        color: white;
        font-size: 12px;
        &:hover {
            color: white;
        }
    }
    &__avatar {
        border-radius: 50%;
        height: 30px;
        width: 30px;
        vertical-align: middle;
        display: inline-block;
        box-shadow: 0 0 2px 1px rgba(255,255,255,.4);
    }
}

.app-header {
    text-align: center;
    box-shadow: 0 2px 2px rgba(0,0,0,0.15);
    padding-bottom: 10px;
}
.app-wrapper {
    height: calc(~"100% - 40px");
    padding: 0;
    position: relative;
    overflow: hidden;
    > .app-container {
        overflow: auto;
        height: calc(100% ~"-" 96px);
        padding-top: 20px;
    }
    .btn-save {
        i.fa {
            margin-right: 3px;
            display: inline-block;
        }
        i.fa.fa-spin {
            display: none;
        }
        &.in-progress {
            pointer-events: none;
            i.fa {
                display: none;
            }
            i.fa.fa-spin {
                display: inline-block;
            }
        }
    }
    header {
        text-align: center;
        height: 60px;
        line-height: 60px;
        font-size: 20px;
    }
}

.model-list {
    > div {
        min-width: 200px;
        display: inline-block;
        margin: 0 10px;
    }
}

// specific
.minimap-container {
    .fa.fa-remove {
        position: absolute;
        right: 0;
        top: 0;
        height: 40px;
        width: 40px;
        text-align: center;
        line-height: 40px;
        font-size: 20px;
        transition: all .3s ease-in-out;
        border-top-right-radius: 3px;
        &:hover {
            background-color: #337ab7;
            color: white;
        }
    }
    div {
        position: relative;
        padding: 5px 0 5px 20px;
        background-color: rgba(202, 203, 242, 0.06);
        border: 1px solid rgba(202, 203, 242, 0.4);
        margin: 0 10px 10px 0;
        border-radius: 3px;
        cursor: pointer;
        transition: all .4s ease-in-out;
        &:hover {
            background-color: rgba(202, 203, 242, 0.2);
        }
    }
    div.children {
        background-color: transparent;
        border: none;
    }
}

